moving address location

--- a/index.html
+++ b/index.html
@@ -109,10 +109,7 @@
                         Dogs are as unique as people and loved for their individuality.
                     </p>
                 </div>
-                <div class="hero-image-container">
-                    <img src="images/instagram.png" alt="Dog and walker" class="hero-image">
-                    <p class="hero-location text-md">Located in Seaford, NY</p>
-                </div>
+                <img src="images/instagram.png" alt="Dog and walker" class="hero-image">
             </div>
         </div>
      </section>
@@ -638,6 +635,7 @@
                         <ul>
                             <li><a href="#footer">fortheloveofdogs111@gmail.com</a></li>
                             <li><a href="#footer">(516) 728-8540</a></li>
+                            <li><a href="#footer">Seaford, NY</a></li>
                             <!-- <li><a href="https://www.facebook.com/lee.mezzasalma"><i class="fab fa-facebook"></i>Facebook</a></li>
                             <li><a href ="https://www.instagram.com/lee_mezza/"><i class="fab fa-instagram"></i>Instagram</a></li> -->
                         </ul>
