removing 1 more photo

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                     <div class="gallery-item">
                         <img src="images/dog7.jpg" alt="" class="gallery-img">
                     </div>
-                    <div class="gallery-item">
+                    <!-- <div class="gallery-item">
                         <img src="images/dog8.jpg" alt="" class="gallery-img">
-                    </div>
+                    </div> -->
                     <!-- <div class="gallery-item">
                         <img src="images/dog9.jpg" alt="" class="gallery-img">
                     </div> -->
